--- a/p25-simple-crud/Pages/EmpleadosAgregarEditar.razor
+++ b/p25-simple-crud/Pages/EmpleadosAgregarEditar.razor
@@ -71,7 +71,7 @@ NavigationManager.NavigateTo("empleados",forceLoad:true);
 }
 void Cancel()
 {
-NavigationManager.NavigateTo("empleados"forceLoad:true);
+NavigationManager.NavigateTo("empleados",forceLoad:true);
 }
 protected override void OnInitialized()
 {
