--- a/p27-segundo-examen-parcial/Shared/NavMenu.razor
+++ b/p27-segundo-examen-parcial/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">p25-crud</a>
+        <a class="navbar-brand" href="">p27-segundo-examen-parcial</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
